Add func in util_forecast.py

--- a/notebooks/test.ipynb
+++ b/notebooks/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "id": "317f2504",
    "metadata": {},
    "outputs": [],
@@ -11,7 +11,18 @@
     "import pandas as pd\n",
     "import requests\n",
     "import os\n",
-    "import pprint"
+    "import pprint\n",
+    "import streamlit as st"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2071d6b1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install streamlit"
    ]
   },
   {
@@ -963,6 +974,76 @@
     "        #                 'id': 500,\n",
     "        #                 'main': 'Rain'}],\n",
     "        #    'wind': {'deg': 279, 'gust': 2.74, 'speed': 1.23}},"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "757af89e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[31mSignature:\u001b[39m\n",
+      "st.info(\n",
+      "    body: \u001b[33m'SupportsStr'\u001b[39m,\n",
+      "    *,\n",
+      "    icon: \u001b[33m'str | None'\u001b[39m = \u001b[38;5;28;01mNone\u001b[39;00m,\n",
+      "    width: \u001b[33m'WidthWithoutContent'\u001b[39m = \u001b[33m'stretch'\u001b[39m,\n",
+      ") -> \u001b[33m'DeltaGenerator'\u001b[39m\n",
+      "\u001b[31mDocstring:\u001b[39m\n",
+      "Display an informational message.\n",
+      "\n",
+      "Parameters\n",
+      "----------\n",
+      "body : str\n",
+      "    The text to display as GitHub-flavored Markdown. Syntax\n",
+      "    information can be found at: https://github.github.com/gfm.\n",
+      "\n",
+      "    See the ``body`` parameter of |st.markdown|_ for additional,\n",
+      "    supported Markdown directives.\n",
+      "\n",
+      "    .. |st.markdown| replace:: ``st.markdown``\n",
+      "    .. _st.markdown: https://docs.streamlit.io/develop/api-reference/text/st.markdown\n",
+      "icon : str, None\n",
+      "    An optional emoji or icon to display next to the alert. If ``icon``\n",
+      "    is ``None`` (default), no icon is displayed. If ``icon`` is a\n",
+      "    string, the following options are valid:\n",
+      "\n",
+      "    - A single-character emoji. For example, you can set ``icon=\"🚨\"``\n",
+      "      or ``icon=\"🔥\"``. Emoji short codes are not supported.\n",
+      "\n",
+      "    - An icon from the Material Symbols library (rounded style) in the\n",
+      "      format ``\":material/icon_name:\"`` where \"icon_name\" is the name\n",
+      "      of the icon in snake case.\n",
+      "\n",
+      "      For example, ``icon=\":material/thumb_up:\"`` will display the\n",
+      "      Thumb Up icon. Find additional icons in the `Material Symbols               <https://fonts.google.com/icons?icon.set=Material+Symbols&icon.style=Rounded>`_\n",
+      "      font library.\n",
+      "width : \"stretch\" or int\n",
+      "    The width of the info element. This can be one of the following:\n",
+      "\n",
+      "    - ``\"stretch\"`` (default): The width of the element matches the\n",
+      "      width of the parent container.\n",
+      "    - An integer specifying the width in pixels: The element has a\n",
+      "      fixed width. If the specified width is greater than the width of\n",
+      "      the parent container, the width of the element matches the width\n",
+      "      of the parent container.\n",
+      "\n",
+      "Example\n",
+      "-------\n",
+      ">>> import streamlit as st\n",
+      ">>>\n",
+      ">>> st.info('This is a purely informational message', icon=\"ℹ️\")\n",
+      "\u001b[31mFile:\u001b[39m      c:\\users\\user\\appdata\\local\\programs\\python\\python313\\lib\\site-packages\\streamlit\\elements\\alert.py\n",
+      "\u001b[31mType:\u001b[39m      method"
+     ]
+    }
+   ],
+   "source": [
+    "st.info?"
    ]
   }
  ],
